<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">catastrophes-system-android</string>
    <string name="titulo">Sistema De Soporte Ante Catástrofes</string>
    <string name="titulo_registro_usuario">Registro De Usuario</string>
    <string name="titulo_modificar_usuario">Modificar Mis Datos</string>
    <string name="titulo_login">Login</string>
    <string name="titulo_mapa_localidades_afectadas">Mapa De Localidades Afectadas</string>
    <string name="titulo_busqueda_persona_desaparecida">Busqueda De Persona Desaparecida</string>   
    <string name="titulo_listado_catastrofes">Selecciona Alguna Catastrofe</string>
    <string name="titulo_listado_catastrofes_personas">Para Ver A Las Personas Desaparecidas</string>
    <string name="titulo_reporte_personas_desaparecidas">Reporte De Personas Desaparecidas</string>
    <string name="titulo_detalle_persona_desaparecida">Detalle Persona Desaparecidaa</string>
    <string name="titulo_pedido_ayuda">Ingresar Un Pedido De Ayuda</string>
    <string name="titulo_donacion">Selecciona Un Tipo De Donación</string>
    <string name="titulo_donacion_economica">Realizar Donación Económica</string>
    <string name="titulo_donacion_bienes">Realizar Donación De Bienes</string>
    <string name="titulo_donacion_servicios">Realizar Donación De Servicios</string>
    <string name="titulo_novedades">Novedades</string>
    <string name="menu_ingresar">Ingresar</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_01">Mapa De Localidades Afectadas</string>
    <string name="menu_02">Busqueda De Persona Desaparecida</string>
    <string name="menu_03">Reporte De Personas Desaparecidas</string>
    <string name="menu_04">Pedido De Ayuda</string>
    <string name="menu_05">Realizar Donación</string>
    <string name="menu_06">Novedades</string>
    <string name="menu_07">Modificar Mis Datos</string>
    <string name="menu_08">Salir</string>
    <string name="home_imagen">Home</string>
    <string name="calendario">Calendario</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_apellido">Apellido:</string>
    <string name="hint_telefono">Teléfono:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_fecha_nacimiento">Fecha De Nacimiento:</string>
    <string name="hint_sexo_masculino">Sexo Masculino</string>
    <string name="hint_sexo_femenino">Sexo Femenino</string>
    <string name="hint_usuario">Usuario:</string>
    <string name="hint_password">Contraseña:</string>
    <string name="hint_nombre_persona">Nombre De La Persona Desaparecida:</string>
    <string name="hint_apellido_persona">Apellido De La Persona Desaparecida:</string>
    <string name="hint_telefono_persona">Telefono De La Persona Desaparecida:</string>
    <string name="hint_descripcion_persona">Descripción De La Persona Desaparecida:</string>
    <string name="hint_imagen_persona">Url De Una Imagen De La Persona Desaparecida:</string>
    <string name="hint_situacion_persona">Escribi En Que Situación Esta La Persona:</string>
    <string name="hint_donacion_monto_pesos">Monto En Pesos:</string>
    <string name="hint_donacion_tipo_tarjeta">Tipo De Tarjeta:</string>
    <string name="hint_donacion_numero_tarjeta">Número De Tarjeta:</string>
    <string name="hint_donacion_descripcion">Escribi Una Descripción Del Bien A Donar:</string>
    <string name="hint_donacion_tipo_servicio">Escribi El Tipo De Servicio Que Deseas Realizar:</string>
    <string name="hint_donacion_horas_disponibles">Escribi La Cantidad De Horas Disponibles:</string>
    <string name="hint_latitud">Latitud</string> 
    <string name="hint_longitud">Longitud</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_ingreso">Ingresar</string>
    <string name="btn_registro">Registrar</string>
    <string name="btn_modificar">Actualizar Datos</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_reportar_persona_hallada">Reportar Que Fue Hallada</string>
    <string name="btn_donacion_economica">Donación Económica</string>
    <string name="btn_donacion_bienes">Donación De Bienes</string>
    <string name="btn_donacion_servicios">Donación De Servicios</string>
    <string name="btn_realizar">Realizar</string>
    <string name="persona_nombre">Nombre Persona</string>
    <string name="persona_imagen">Imagen Persona</string>
    <string name="persona_descripcion">Descripcion Persona Desaparecida</string>
    <string name="catastrofe_imagen">Catastrofe Persona</string>
    
    <color name="green">#75ad3e</color>
    <color name="green_marine">#2aa198</color>
    <color name="green_dark">#1e4312</color>
    <color name="blue">#333dc5</color>
    <color name="blue_dark">#1e2476</color>
    <color name="red">#dc322f</color>
    <color name="yellow">#fcce1c</color>
    <color name="violet">#660066</color>

    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registro_usuario">Registro De Usuario</string>
    <string name="title_activity_reporte_personas_desaparecidas">ReportePersonasDesaparecidasActivity</string>
    <string name="title_activity_detalle_persona_desaparecida">DetallePersonaDesaparecidaActivity</string>
    <string name="title_activity_donacion">DonacionActivity</string>
    <string name="title_activity_donacion_economica">DonacionEconomicaActivity</string>
    <string name="title_activity_donacion_bienes">DonacionBienesActivity</string>
    <string name="title_activity_donacion_servicios">DonacionServiciosActivity</string>
    <string name="title_activity_pedido_ayuda">PedidoAyudaActivity</string>
    <string name="title_activity_novedades">NovedadesActivity</string>
    <string name="title_activity_busqueda_personas_desaparecidas">BusquedaPersonasDesaparecidasActivity</string>
    <string name="title_activity_mapa_localidades_afectadas">MapaLocalidadesAfectadasActivity</string>
    <string name="title_activity_modificar_usuario">ModificarUsuarioActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_listado_catastrofes">ListadoCatastrofesActivity</string>

</resources>
