<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gris"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.catastrophes_system_android.MenuPrincipalActivity" >

    <TextView
        android:id="@+id/TituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"        
        android:text="@string/titulo" />
    
    <Button
    	android:id="@+id/Menu01"
    	android:layout_width="260dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="15sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
    	android:layout_centerHorizontal="true"
   		android:layout_below="@id/TituloApp"  
   		android:layout_marginTop="10dp"  
   		android:background="@color/blue_dark"   			
   		android:text="@string/menu_01" />    
   
    <Button
    	android:id="@+id/Menu02"
    	android:layout_width="260dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="15sp"  
    	android:textColor="#ffffff"	
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
    	android:layout_centerHorizontal="true"
   		android:layout_below="@id/Menu01"   
   		android:layout_marginTop="10dp"  
   		android:background="@color/blue_dark"  			
   		android:text="@string/menu_02" />
    
    <Button
    	android:id="@+id/Menu03"
    	android:layout_width="260dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="15sp"  
    	android:textColor="#ffffff"	
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
    	android:layout_centerHorizontal="true"
   		android:layout_below="@id/Menu02"    	
   		android:layout_marginTop="10dp"  
   		android:background="@color/blue_dark" 		
   		android:text="@string/menu_03" />
    
    <Button
    	android:id="@+id/Menu04"
    	android:layout_width="260dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="15sp"  
    	android:textColor="#ffffff"	
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
    	android:layout_centerHorizontal="true"
   		android:layout_below="@id/Menu03"    	
   		android:layout_marginTop="10dp"  	
   		android:background="@color/blue_dark" 	
   		android:text="@string/menu_04" />
    
    <Button
    	android:id="@+id/Menu05"
    	android:layout_width="260dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="15sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
    	android:layout_centerHorizontal="true"
   		android:layout_below="@id/Menu04"    
   		android:layout_marginTop="10dp"  
   		android:background="@color/blue_dark" 			
   		android:text="@string/menu_05" />
    
     <Button
    	android:id="@+id/Menu06"
    	android:layout_width="260dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="15sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
    	android:layout_centerHorizontal="true"
   		android:layout_below="@id/Menu05"    
   		android:layout_marginTop="10dp"  
   		android:background="@color/blue_dark" 			
   		android:text="@string/menu_06" />  
   		
     <Button
    	android:id="@+id/Menu07"
    	android:layout_width="125dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="13sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
   		android:layout_below="@id/Menu06"  
   		android:layout_marginTop="10dp"  
   		android:layout_marginLeft="16dp" 
   		android:background="@color/green_dark" 			
   		android:text="@string/menu_07" /> 
   		
     <Button
    	android:id="@+id/Menu08"
    	android:layout_width="125dp"
    	android:layout_height="40dp"
    	android:gravity="center"
    	android:textSize="13sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
   		android:layout_below="@id/Menu06"    
   		android:layout_toRightOf="@id/Menu07"  
   		android:layout_marginTop="10dp"  
   		android:layout_marginLeft="6dp" 
   		android:background="@color/violet" 
		android:text="@string/menu_08" />     

</RelativeLayout>
