<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gris"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.catastrophes_system_android.DonacionEconomicaActivity" >

    <TextView
        android:id="@+id/TituloDonacionEconomica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"    
        android:layout_marginBottom="20dp"      
        android:text="@string/titulo_donacion_economica" />
    
     <EditText
    	android:id="@+id/Monto"
    	android:layout_width="280dp"
    	android:layout_height="wrap_content"
    	android:textSize="13sp"  	
    	android:textColor="#ffffff"      	
    	android:fontFamily="sans-serif-condensed"
    	android:hint="@string/hint_donacion_monto_pesos"    	
    	android:layout_below="@id/TituloDonacionEconomica"  
    	android:inputType="number" />
     
     <EditText
    	android:id="@+id/TipoTarjeta"
    	android:layout_width="280dp"
    	android:layout_height="wrap_content"
    	android:textSize="13sp"  	
    	android:textColor="#ffffff"      	
    	android:fontFamily="sans-serif-condensed"
    	android:hint="@string/hint_donacion_tipo_tarjeta"    	
    	android:layout_below="@id/Monto"  
    	android:inputType="text" />
     
      <EditText
    	android:id="@+id/NumeroTarjeta"
    	android:layout_width="280dp"
    	android:layout_height="wrap_content"
    	android:textSize="13sp"  	
    	android:textColor="#ffffff"      	
    	android:fontFamily="sans-serif-condensed"
    	android:hint="@string/hint_donacion_numero_tarjeta"    	
    	android:layout_below="@id/TipoTarjeta"  
    	android:inputType="text" />
      
    <Button
    	android:id="@+id/Cancelar"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="16sp"  	
    	android:textColor="#000000"
    	android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
   		android:layout_alignParentBottom="true"    
   		android:background="@color/red"   					
   		android:text="@string/btn_cancelar" />  
     
    <Button
    	android:id="@+id/Realizar"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="16sp"  	
    	android:textColor="#000000"
    	android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
    	android:layout_toRightOf="@id/Cancelar"  
   		android:layout_alignParentBottom="true"        		
   		android:background="@color/green"
   		android:text="@string/btn_realizar" />  

</RelativeLayout>
