<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gris"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.catastrophes_system_android.LoginActivity" >

    <TextView
        android:id="@+id/TituloRegistroUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"  	
    	android:textColor="#ffffff"    	
    	android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"  
        android:layout_marginBottom="20dp"      
        android:text="@string/titulo_login" />
    
    <EditText
    	android:id="@+id/Usuario"
    	android:layout_width="280dp"
    	android:layout_height="wrap_content"
    	android:textSize="18sp"  	
    	android:textColor="#ffffff"    	 
    	android:fontFamily="sans-serif-condensed"	
    	android:hint="@string/hint_usuario"    	
    	android:layout_below="@id/TituloRegistroUsuario"  
    	android:layout_marginTop="10dp"
    	android:inputType="text" />
     
    <EditText
    	android:id="@+id/Password"
    	android:layout_width="280dp"
    	android:layout_height="wrap_content"
    	android:textSize="18sp"  	
    	android:textColor="#ffffff"    	   
    	android:fontFamily="sans-serif-condensed"	
    	android:hint="@string/hint_password"    	
    	android:layout_below="@id/Usuario"  
    	android:layout_marginTop="10dp"
    	android:inputType="textPassword" /> 
    	
    <Button
    	android:id="@+id/Cancelar"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="16sp"  	
    	android:textColor="#000000"
    	android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
    	android:layout_marginTop="250dp"
   		android:layout_below="@id/Password"    
   		android:background="@color/red"   					
   		android:text="@string/btn_cancelar" />  
     
    <Button
    	android:id="@+id/Ingresar"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="16sp"  	
    	android:textColor="#000000"
    	android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
    	android:layout_marginTop="250dp"
    	android:layout_toRightOf="@id/Cancelar"  
   		android:layout_below="@id/Password"       		
   		android:background="@color/green"
   		android:text="@string/btn_ingreso" />  

</RelativeLayout>
