<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gris"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.catastrophes_system_android.DetallePersonaDesaparecidaActivity" >

    <TextView
        android:id="@+id/TituloDetallePersonaDesaparecida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
        android:layout_centerHorizontal="true"        
        android:text="@string/titulo_detalle_persona_desaparecida" />
    
    <ImageView
        android:id="@+id/ImagenPersonaDesaparecida"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/TituloDetallePersonaDesaparecida"   
        android:contentDescription="@string/persona_imagen"
        android:src="@drawable/persona" />
    
    <TextView
        android:id="@+id/DescripcionPersonaDesaparecida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"      
        android:layout_below="@id/ImagenPersonaDesaparecida"    
        android:text="@string/persona_descripcion" />
    
    <Button
    	android:id="@+id/Volver"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="12sp"  	
    	android:textColor="#000000"
    	android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
    	android:layout_alignParentBottom="true"    
   		android:background="@color/red"   					
   		android:text="@string/btn_volver" />  
   		
    <Button
    	android:id="@+id/ReportarQueFueHallada"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="12sp"  	
    	android:textColor="#000000"
    	android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentBottom="true"     
        android:layout_toRightOf="@id/Volver"  	  	
   		android:background="@color/green"   		
   		android:text="@string/btn_reportar_persona_hallada" />  
   		
</RelativeLayout>
