<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gris"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.catastrophes_system_android.MainActivity" >

    <TextView
        android:id="@+id/TituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"    	
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"        
        android:text="@string/titulo" />
    
	<ImageView
        android:id="@+id/ImagenHome"
        android:layout_width="290dp"
        android:layout_height="220dp"
        android:layout_below="@id/TituloApp"    
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/home_imagen"
        android:src="@drawable/logo_home" />    
    
    <Button
    	android:id="@+id/MenuLogin"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="16sp"  	
    	android:textColor="#ffffff"
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"    
   		android:layout_below="@id/ImagenHome"    
   		android:background="@color/blue_dark"			
   		android:text="@string/menu_ingresar" />    
   
    <Button
    	android:id="@+id/MenuRegistro"
    	android:layout_width="145dp"
    	android:layout_height="35dp"
    	android:gravity="center"
    	android:textSize="16sp"  
    	android:textColor="#ffffff"	
    	android:textStyle="bold"
    	android:fontFamily="sans-serif-condensed"    	
   		android:layout_below="@id/ImagenHome"   	
   		android:layout_toRightOf="@id/MenuLogin"   		
   		android:background="@color/green_dark"  		
   		android:text="@string/menu_registro" />  

</RelativeLayout>
